; ModuleID = '/home/carl/AnghaBench/libgit2/tests/merge/extr_analysis.c_test_merge_analysis__unborn.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/merge/extr_analysis.c_test_merge_analysis__unborn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"refs/heads/master\00", align 1
@NOFASTFORWARD_BRANCH = common dso_local global i32 0, align 4
@GIT_MERGE_ANALYSIS_FASTFORWARD = common dso_local global i32 0, align 4
@GIT_MERGE_ANALYSIS_UNBORN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_merge_analysis__unborn() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* @repo, align 4
  %6 = call i32 @git_repository_path(i32 %5)
  %7 = call i32 @git_buf_joinpath(i32* %3, i32 %6, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = call i32 @git_buf_cstr(i32* %3)
  %10 = call i32 @p_unlink(i32 %9)
  %11 = call i32 @cl_must_pass(i32 %10)
  %12 = load i32, i32* @NOFASTFORWARD_BRANCH, align 4
  %13 = call i32 @analysis_from_branch(i32* %1, i32* %2, i32* null, i32 %12)
  %14 = load i32, i32* @GIT_MERGE_ANALYSIS_FASTFORWARD, align 4
  %15 = load i32, i32* @GIT_MERGE_ANALYSIS_UNBORN, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* %1, align 4
  %18 = call i32 @cl_assert_equal_i(i32 %16, i32 %17)
  %19 = call i32 @git_buf_dispose(i32* %3)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_buf_joinpath(i32*, i32, i8*) #1

declare dso_local i32 @git_repository_path(i32) #1

declare dso_local i32 @cl_must_pass(i32) #1

declare dso_local i32 @p_unlink(i32) #1

declare dso_local i32 @git_buf_cstr(i32*) #1

declare dso_local i32 @analysis_from_branch(i32*, i32*, i32*, i32) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
